# formallymad

./: .gitignore  AGENTS.md  LICENSE  README.md  agent.py  benchmark.py  mad_software_dev.py  main.py  prompts.py  pyproject.toml  tools.py
.github/workflows/: tests.yml
analysis/: semantic_aware_robustness.py
data/: __init__.py
data/medqa/: README.md  medqa.py  medqa_30.jsonl
data/multisourceqa/: README.md  __init__.py  calendar.jsonl  company.jsonl  customers.jsonl  loader.py  multisourceqa.py  questions.jsonl  slack.jsonl  timeline_audit.py
src/formallymad/: __init__.py  agent.py  prompts.py  qbaf.py  tools.py  ui.py  utils.py  value_function.py
tests/: test_qbaf.py
